// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardContentYotpoReviewTopics/> render() should render children as a list of pills 1`] = `
<div
  className="topTopicsContainer"
>
  <span
    className="container"
  >
    <span
      className="label"
    >
      <span
        className="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    className="topics"
  >
    <Badge
      className="topic"
      key="bread"
      type="light"
    >
      bread
    </Badge>
    <Badge
      className="topic"
      key="test"
      type="light"
    >
      test
    </Badge>
  </span>
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 1`] = `
<div
  className="topTopicsContainer"
>
  <span
    className="container"
  >
    <span
      className="label"
    >
      <span
        className="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    className="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 2`] = `
<div
  className="topTopicsContainer"
>
  <span
    className="container"
  >
    <span
      className="label"
    >
      <span
        className="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    className="topics"
  />
</div>
`;

exports[`<CardContentYotpoReviewTopics/> render() should render correctly if children is empty/null 3`] = `
<div
  className="topTopicsContainer"
>
  <span
    className="container"
  >
    <span
      className="label"
    >
      <span
        className="material-icons favorite"
      >
        favorite
      </span>
      Top Mentioned Topics
    </span>
  </span>
  <span
    className="topics"
  />
</div>
`;
